# LocalizationServer

./: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  LICENSE  README.md
param/: Basic.yaml  CameraCalibration.yaml  ImageTransform.yaml  SegmentationThreshold.yaml
param/bak/: Basic.yaml  CameraCalibration.yaml  CameraCalibration_1080p.yaml  SegmentationThreshold.yaml
src/: Broadcaster.cpp  Broadcaster.h  Broadcaster_test.cpp  CMakeLists.txt  Calibration.cpp  ColorSegmentation.cpp  ColorSegmentation.h  DataCenter.cpp  DataCenter.h  GetColor.cpp  GetField.cpp  Image2World.cpp  Image2World.h  LocalizationServer.cpp  RobotStruct.h  TeamDetect.cpp  TeamDetect.h  capture.cpp  common.h  getColor.cpp  localizationServer.cpp  param.cpp
